# matcher

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  docker-entrypoint.sh  endpoints.yaml  matcher-grpc.sh  matcher-server.sh  matcher.config.js  old_Dockerfile  old_README.md  test_ci_local.sh
.github/workflows/: ci.yml  release.yml
config/: endpoints_en.yaml
data/mydb/my_table.lance/_transactions/: 0-7c7a1d6b-4664-49ec-9155-7d257331f375.txn
data/mydb/my_table.lance/_versions/: 1.manifest
data/mydb/my_table.lance/data/: 7ae57612-8eb0-4c21-8f8d-7781853fc48d.lance
proto/: matcher.proto
src/: cli.rs  config.rs  constants.rs  db.rs  embeddings.rs  extract_app_name.rs  grpc_server.rs  health.rs  health_test.rs  language_patterns.rs  lib.rs  load_model.rs  main.rs  matcher_service.rs  model.rs  preprocessing.rs  process_search_results.rs  send_structured_message.rs
src/candle/: get_embeddings.rs  load_model.rs  mod.rs
src/database/: db_initializer.rs  mod.rs  parameter_extractor.rs  schema.rs  search_result.rs  vector_db.rs
src/database/initialization/: constants.rs  mod.rs  table_init.rs
src/database/search_operations/: mod.rs  process_results.rs  process_search_batch.rs  process_single_result.rs  search_similar.rs
src/database/vector_db/: add_pattern.rs  db.rs  mod.rs  search.rs
src/filters/: custom_regex.rs  extract_app_name.rs  extract_email.rs  extract_parameters.rs  mod.rs
src/grpc/: grpc_server.rs  grpc_service.rs  matcher_service.rs  mod.rs  service.rs  start_grpc_server.rs
src/interaction/: endpoint.rs  handlers.rs  mod.rs  state.rs
src/messaging/: get_authenticated_iggy_client.rs  mod.rs  send_structured_message.rs
src/preprocessing/: language_patterns.rs  mod.rs  preprocess_query.rs
src/search_operations/: mod.rs  parameter_analysis.rs  process_search_batch.rs  process_single_result.rs  search_similar.rs
src/tests/: mod.rs
src/vector_db/: db.rs  initialization.rs  mod.rs  old_search.rs  search_result.rs  types.rs
src/vector_db/search/: mod.rs  process.rs  result_processor.rs  similar.rs  vector_search.rs
test/: send_mail.sh
test/interactive/: build.rs
test/interactive/src/: main.rs  run_testcase.rs
tests/interactive/: Cargo.toml
tests/interactive/src/: main.rs
