[package]
name = "berto"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.92"
arrow = { version = "52.2", optional = false }
arrow-array = "52.2"
arrow-schema = "52.2"
candle-core = "0.7.2"
candle-nn = "0.7.2"
candle-transformers = "0.7.2"
clap = { version = "4.5.20", features = ["derive"] }
futures = "0.3.31"
futures-util = "0.3.31"
lancedb = "0.11.0"
lazy_static = "1.5.0"
pretty_assertions = "1.4.1"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
serde_yaml = "0.9.34"
# tch = "0.17.0"
thiserror = "1.0.66"
tokenizers = "0.20.1"
tokio = { version = "1.41.0", features = ["full"] }


[[bin]]
name = "matcher"
path = "src/main.rs"
