[package]
name = "matcher"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.92"
arrow = { version = "52.2", optional = false }
arrow-array = "52.2"
arrow-schema = "52.2"
async-trait = "0.1.83"
candle-core = "0.7.2"
candle-nn = "0.7.2"
candle-transformers = "0.7.2"
clap = { version = "4.5.20", features = ["derive"] }
futures = "0.3.31"
futures-util = "0.3.31"
lancedb = "0.11.0"
lazy_static = "1.5.0"
pretty_assertions = "1.4.1"
regex = "1.11.1"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
serde_yaml = "0.9.34"
iggy = "0.6.31"
thiserror = "1.0.66"
tokenizers = "0.20.1"
tokio = { version = "1.41.0", features = ["full"] }
chrono = "0.4.38"
tonic = "0.12.3"
tonic-reflection = "0.12.3"
tracing = "0.1.40"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
prost = "0.13.3"

[[bin]]
name = "matcher"
path = "src/main.rs"

[build-dependencies]
tonic-build = "0.12.3"
